--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -43,10 +43,9 @@
                                 <strong>{{ item.product.name }}</strong>
                             </p>
                             <p class="my-0 mx-2">At weight {{ item.weight }}</p>
-                            <p class="my-0 mx-2 text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">£{{ item.subtotal }}</p>
+                            <p class="my-0 small text-muted">£{{ item.price|floatformat:2 }}</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -61,6 +60,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the delivery form:</p>
                 <form action="{% url 'checkout' %}"
@@ -84,8 +84,6 @@
                         {{ order_form.state_or_region | as_crispy_field }}
                         {{ order_form.postcode | as_crispy_field }}
                         {{ order_form.country | as_crispy_field }}
-                        {{ order_form.delivery_cost }}
-                        {{ order_form.grand_total }}
 
                         <div class="form-check form-check-inline float-right mr-0">
                             {% if user.is_authenticated %}
@@ -106,7 +104,6 @@
 
                     <fieldset>
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
-
                         <div class="mb-3" id="card-element"></div>
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
@@ -131,7 +128,8 @@
                                 </div>
                             {% endif %}
                         {% endif %}
-
+                        <input type="hidden" name="delivery_cost" id="id_delivery_cost" value="0">
+                        <input type="hidden" name="grand_total" id="id_grand_total" value="0">
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">
@@ -148,10 +146,10 @@
                         </button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
+
     <!-- loading overlay borrowed from code institute -->
     <div id="loading-overlay">
         <h3 class="text-light logo-font loading-spinner">
@@ -160,7 +158,6 @@
             </span>
         </h3>
     </div>
-
 {% endblock content %}
 
 {% block extra_js %}
