--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-
     <div class="container-fluid">
         <div class="row">
             <div class="col">
@@ -28,7 +27,7 @@
                 </div>
             </div>
         {% endif %}
-        <!-- taken and adapted from Code Institute's Boutique Ado walkthrough -->
+
         <div class="row">
             <div class="col-12 col-lg-7">
                 <div class="p-2 pr-4 give-border">
@@ -55,6 +54,7 @@
                             <p class="mb-1">{{ order.date }}</p>
                         </div>
                     </div>
+
                     <hr>
                     <div class="row">
                         <div class="col">
@@ -68,10 +68,15 @@
                                 <p class="small mb-0 text-black font-weight-bold">{{ item.product.name }}</p>
                             </div>
                             <div class="col-12 col-md-8 text-md-right">
-                                <p class="small mb-0">{{ item.weight }}g, x{{ item.quantity }}: £{{ item.item_total }}</p>
+                                <p class="small mb-0">
+                                    {{ item.weight }}g:
+                                    £{{ item.item_total|floatformat:2 }}
+                                    {% if item.item_total == 0 %}<span class="text-muted">(Free Sample)</span>{% endif %}
+                                </p>
                             </div>
                         </div>
                     {% endfor %}
+
                     <hr>
                     <div class="row mt-1">
                         <div class="col">
@@ -103,7 +108,6 @@
                             </div>
                             <div class="col-12 col-md-8 text-md-right">
                                 <p class="mb-0">{{ order.address_line2 }}</p>
-                                <!-- ✅ Correct field -->
                             </div>
                         </div>
                     {% else %}
@@ -167,6 +171,7 @@
                             </div>
                         </div>
                     {% endif %}
+
                     <hr>
                     <div class="row mt-1">
                         <div class="col">
@@ -203,6 +208,7 @@
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-12 col-lg-7 text-right">
                 {% if from_superuser %}
@@ -211,14 +217,11 @@
                     <a href="{% url 'shop' %}"
                        class="btn btn-black rounded-0 my-2"
                        aria-label="Go back to shop">
-                        <span class="icon mr-2">
-                            <i class="fas fa-gifts"></i>
-                        </span>
+                        <span class="icon mr-2"><i class="fas fa-gifts"></i></span>
                         <span class="text-uppercase">Back to the Shop</span>
                     </a>
                 {% endif %}
             </div>
         </div>
     </div>
-
 {% endblock content %}
