--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -42,8 +42,7 @@
                             <p class="my-0">
                                 <strong>{{ item.product.name }}</strong>
                             </p>
-                            <p class="my-0 small">Weight: {{ item.weight }}</p>
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small">Weight: {{ item.weight }}g</p>
                             <p class="my-0">
                                 <strong>£{{ item.price }}</strong>
                             </p>
