--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -19,7 +19,7 @@
                     <div class="row row-cols-1 row-cols-md-2 g-3">
                         {% for item in bag_items %}
                             {% if item.weight != 5 and item.weight != 20 %}
-                                <div class="col">
+                                <div class="col-12 col-sm-6 mb-3">
                                     <div class="card p-3 h-100 d-flex flex-column give-border bordered-details">
                                         <h5 class="card-title">{{ item.product.name }}</h5>
 
