--- a/bag/templates/bag/bag_buttons.html
+++ b/bag/templates/bag/bag_buttons.html
@@ -57,8 +57,8 @@
             </div>
         {% else %}
             <p class="mt-3">
-                <a href="{% url 'account_login' %}">Sign In</a> or
-                <a href="{% url 'account_signup' %}">Register</a> to continue your purchase.
+                <a href="{% url 'account_login' %}" class="orange-text font-underline">Sign In</a> or
+                <a href="{% url 'account_signup' %}" class="orange-text font-underline">Register</a> to continue your purchase.
             </p>
         {% endif %}
     </div>
