--- a/superuser_admin/templates/superuser_admin/add_post.html
+++ b/superuser_admin/templates/superuser_admin/add_post.html
@@ -10,7 +10,7 @@
         <div class="text-right">
             <button type="submit">Add Post</button>
         </div>
-        <button><a href="{% url 'superuser_admin_page' %}">Back to Admin Page</a></button>
+    <a href="{% url 'superuser_admin_page' %}" class="btn">Back to Admin Page</a>
     </form>
 </div>
 
