--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-12 col-md-6 text-right">
                 <h3 class="text-md-center">Your Information:</h3>
-                {% if user.user_profile.subscribed_to_email %}
+                {% if user.user_profile.subscribed_to_members_club %}
                     <p class="display-info">You are currently subscribed to our email marketing service.</p>
                 {% else %}
                     <p>
