Add: Mailchimp signup form to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,10 @@
         <!-- Bootstrap 4 -->
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+        <!-- Mailchimp CSS -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css"
+              rel="stylesheet"
+              type="text/css">
         <!-- My CSS -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <!-- Extra custom CSS -->
@@ -145,18 +149,78 @@
                     <div class="col-12 mx-auto border-bottom">
                         <h4>Contact:</h4>
                     </div>
-                    <div class="col-12 col-md-6 mt-3">
+                    <div class="col-12 col-md-3 mt-3">
                         <p>
                             <a aria-label="Link to Facebook"
                                href="https://facebook.com"
                                rel="noopener"
-                               target="_blank"><span class="fab fa-facebook-f" aria-hidden="true"></span><span class="orange-text"> Find us on Facebook!</span></a>
+                               target="_blank"><span class="fab fa-facebook-f" aria-hidden="true"></span><span class="orange-text">Find us on Facebook!</span></a>
                         </p>
                     </div>
-                    <div class="col-12 col-md-6 mt-3">
+                    <div class="col-12 col-md-4 mt-3">
                         <p>
                             Or go to our <a aria-label="Go to about page" href="{% url 'about_us' %}"><strong>About Us</strong></a> page to fill out the enquiry form!
                         </p>
+                    </div>
+                    <div class="col-12 col-md-5">
+                        <div id="mc_embed_shell">
+                            <div id="mc_embed_signup">
+                                <form action="https://gmail.us5.list-manage.com/subscribe/post?u=88fa26ad0f9e461f2d93c284f&amp;id=2c9d069d66&amp;f_id=007593e1f0"
+                                      method="post"
+                                      id="mc-embedded-subscribe-form"
+                                      name="mc-embedded-subscribe-form"
+                                      class="validate"
+                                      target="_blank">
+                                    <div id="mc_embed_signup_scroll">
+                                        <h2>Subscribe</h2>
+                                        <div class="indicates-required">
+                                            <span class="asterisk">*</span> indicates required
+                                        </div>
+                                        <div class="mc-field-group">
+                                            <label for="mce-EMAIL">
+                                                Email Address <span class="asterisk">*</span>
+                                            </label>
+                                            <input type="email"
+                                                   name="EMAIL"
+                                                   class="required email"
+                                                   id="mce-EMAIL"
+                                                   required=""
+                                                   value="">
+                                        </div>
+                                        <div id="mce-responses" class="clear foot">
+                                            <div class="response" id="mce-error-response"></div>
+                                            <div class="response" id="mce-success-response"></div>
+                                        </div>
+                                        <div class="mc-d" aria-hidden="true">
+                                            /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                                            <input type="text"
+                                                   name="b_88fa26ad0f9e461f2d93c284f_2c9d069d66"
+                                                   tabindex="-1"
+                                                   value="">
+                                        </div>
+                                        <div class="optionalParent">
+                                            <div class="clear foot">
+                                                <input type="submit"
+                                                       name="subscribe"
+                                                       id="mc-embedded-subscribe"
+                                                       class="button"
+                                                       value="Subscribe">
+                                                <p class="mc-p">
+                                                    <a href="https://eepurl.com/jhu_JM"
+                                                       title="Mailchimp - email marketing made easy and fun"><span class="mc-spn">
+                                                        <img width="220"
+                                                             height="40"
+                                                             src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                             alt="Intuit Mailchimp">
+                                                    </span></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -169,6 +233,17 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
+        <!-- Mailchimp -->
+        <script type="text/javascript"
+                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+        <script type="text/javascript">
+            (function($) {window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0]='EMAIL';
+                ftypes[0]='email';
+            }(jQuery));
+            var $mcj = jQuery.noConflict(true);
+        </script>
         <!-- Extra custom JS -->
         {% block extra_js %}
             <script>
